# upscale-studio

./: .gitignore  .gitleaks.toml  .markdownlint.json  .pr-agent.toml  .pr_agent.toml  README.md  pyproject.toml  requirements.txt  ruff.toml  setup.bat  setup_env.py  sonar-project.properties  start.bat
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md  release.yml
.github/workflows/: auto-label-review-tier.yml  auto-merge-dependabot.yml  ci.yml  cleanup-branches.yml  codeql.yml  dependency-review.yml  semgrep.yml  sonarcloud.yml
app/: main.py  pipeline.py
docs/: SESSION-CONTEXT.md
docs/superpowers/specs/: 2026-03-10-performance-pipeline-design.md
static/: app.js  index.html  style.css
