[project]
name = "upscale-studio"
version = "1.0.0"
description = "Local browser-based video upscaling using Real-ESRGAN ncnn-vulkan"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.135.2",
    "uvicorn[standard]==0.42.0",
    "python-multipart==0.0.22",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "pip-audit",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
